Fix delete-matcher operation
